feat(context): #104 реализовал конструктор по значениям для Массив